// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Default should render as elements 1`] = `
<DocumentFragment>
  <span
    class="sc-bcXHqe bLlgzy"
  >
    Box Content
  </span>
</DocumentFragment>
`;

exports[`Box Default should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe bLlgzy"
  >
    Box Content
  </div>
</DocumentFragment>
`;
